tests/ui/keyword/meta-is-not-reserved.stderr
error[E0425]: cannot find value `meta` in this scope
  --> $DIR/meta-is-not-reserved.rs:5:15
   |
LL |     let xyz = meta;
   |               ^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
